<resources>
    <string name="app_name">我呸！</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="load_error">加载失败</string>
    <string name="ask_error">请求失败</string>
    <string name="user_name">用户名</string>
    <string name="user_pwd">密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login">登录</string>
    <string name="goBack">返回</string>
    <string name="commit">提交</string>
    <string name="put_name">请输入用户名</string>
    <string name="put_pwd">请输入密码</string>
    <string name="put_emali">请您的邮箱</string>
    <string name="register">注册</string>
    <string name="news">新闻</string>
    <string name="jokes">笑话</string>
    <string name="pictures">图片</string>
    <string name="myself">我</string>

    <string name="update_userinfo_success">更新用户信息成功:</string>
    <string name="update_userinfo_failed">更新用户信息失败:</string>
    <string name="more_info">完善个人信息</string>
    <string name="auto_login_failed">自动登陆失败</string>
    <string name="auto_login_third_failed">第三方登陆失败</string>
    <string name="select_sex">性别选择</string>
    <string name="select_age">年龄选择</string>
    <string name="select_city">城市选择</string>
    <string name="checkinfo">请完善您的信息</string>
    <string name="upload_failed">上传失败</string>
    <string name="upload_photo_success">上传成功</string>
    <string name="select_pic_failed">选择图片失败</string>
    <string name="collection">收藏</string>
    <string name="load_failed">加载失败，点我再试试？</string>
    <string name="loading">努力加载中</string>
</resources>
