<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_background"
    tools:context="com.darren.mydemo.activity.LoginActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/riv_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:src="@mipmap/theme"
        app:riv_border_color="#f2f1f1"
        app:riv_border_width="2dp"
        app:riv_oval="true" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/riv_view"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_pwd" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="注册" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear3"
        android:paddingTop="40dp">

        <ImageButton
            android:id="@+id/Ib_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:onClick="onClick"
            android:src="@drawable/ssdk_oks_classic_sinaweibo" />

        <ImageButton
            android:id="@+id/Ib_QQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:onClick="onClick"
            android:src="@drawable/ssdk_oks_classic_qq" />
    </LinearLayout>
</RelativeLayout>
